# tkinter-open-url

./: .gitignore  PLANNING.md  README.md  TASK.md  git_add_all.sh  git_sync_branches.sh  git_sync_dev_main_after_commit.sh  git_update.sh  main.py  pyproject.toml  requirements.txt  setup.py
.windsurf/: rules.md  workflow-reminders.md
code/: main.py
config/: keep_apps.txt
data/: url_list.txt
docs/: PRD.md  layout.txt  macos_app_setup.txt
ref/: frame_labelframe  ref
scripts/: git_commit_and_sync.sh  git_sync_branches.sh  run_mac_terminal.sh  setup_venv.sh
source/code/: main.py
source/tk/: frame.py  labelframe.py  window.py
tests/: test_button.py  test_window.py
tkinter_code/main/: main.py
tkinter_code/tk/: button.py  frame.py  label.py
tkinter_code/web/: functions.py
tkinter_open_url/tk/: button.py  frame.py  label.py  labelframe.py  window.py
tkinter_open_url/web/: functions.py  url_list.txt  web_functions.py
tktools/system/: system_functions.py
tktools/tk/: button.py  label.py  window.py
tktools/web/: web_functions.py
